crates/edm-core/tests/snapshots/render__field_wide_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== RESPONSE  HTTP 200 OK ===========================================================================
+------------------------+-------------------------------------------------------------------------+
| Field                  | Value                                                                   |
+========================+=========================================================================+
| content-type           | application/json; charset=utf-8                                         |
| uncompressedsize (hea~ | 1,048,576                                                               |
| url                    | https://companion.orerve.net/market?ZmxhZ3M9MSZtYXJrZXRJZD0zMjI5MDI4MD~ |
+------------------------+-------------------------------------------------------------------------+
| nonce                  | a1b2c3d4e5f6                                                            |
+------------------------+-------------------------------------------------------------------------+
