crates/edm-core/tests/snapshots/render__inventory_narrow_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== INVENTORY  2 items ==============================================================================
+------------+-----+-------+---+--------+-------+--------+----------------------+
| Commodity  | Qty | Value | S | Marked | Owner | Origin | Position (x / y / z) |
+============+=====+=======+===+========+=======+========+======================+
| Gold       |  12 | 9,401 | . |      - |     0 |      0 | -                    |
| Tobacco    |   4 | 5,380 | S |      4 |     0 |      0 | -                    |
+------------+-----+-------+---+--------+-------+--------+----------------------+
