crates/edm-core/tests/snapshots/render__inventory_narrow_w48.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== INVENTORY  2 items ==========================
+------------+-----+-------+---+
| Commodity  | Qty | Value | S |
+============+=====+=======+===+
| Gold       |  12 | 9,401 | . |
| Tobacco    |   4 | 5,380 | S |
+------------+-----+-------+---+
   columns hidden to fit 48 cols: Marked, Owner,
   Origin, Position (x / y / z)
