crates/edm-core/tests/snapshots/render__inventory_narrow_w80.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== INVENTORY  2 items ==========================================================
+------------+-----+-------+---+-------+--------+----------------------+
| Commodity  | Qty | Value | S | Owner | Origin | Position (x / y / z) |
+============+=====+=======+===+=======+========+======================+
| Gold       |  12 | 9,401 | . |     0 |      0 | -                    |
| Tobacco    |   4 | 5,380 | S |     0 |      0 | -                    |
+------------+-----+-------+---+-------+--------+----------------------+
   columns hidden to fit 80 cols: Marked
