crates/edm-core/tests/snapshots/render__inventory_wide_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== INVENTORY  3 items ==============================================================================
+-------------+-------+------------+---+--------+------------+-----------+-------------------------+
| Commodity   |   Qty |      Value | S | Marked |      Owner |    Origin | Position (x / y / z)    |
+=============+=======+============+===+========+============+===========+=========================+
| Advanced C~ | 1,024 | 12,345,678 | S |  1,024 | 3229028096 | 128049204 | -1204.5 / 88.0 / 3212.9 |
| Onionhead ~ |    16 |      8,150 | . |      - |          0 |         0 | 0.0 / 0.0 / 0.0         |
+-------------+-------+------------+---+--------+------------+-----------+-------------------------+
| Hydrogen F~ |     - |          - | . |      - |          0 |         0 | -                       |
+-------------+-------+------------+---+--------+------------+-----------+-------------------------+
